--- a/html/about.html
+++ b/html/about.html
@@ -52,50 +52,50 @@
          <a id="link-contact" class="hover:underline" href="./contact.html" tabindex="0">contact</a>
       </nav>
    </header>
-   <main>
-      <!--About Me-->
-      <section id="about-me" aria-label="About Me" class="body--section_about-me">
-         <div id="about-me-anchor" class="section--anchor_about-me anchor"></div>
-         <div id="about-me-content" class="section--container_row">
-            <div id="headshot-container" class="section--avatar">
-               <img src="/assets/CODonnell-Headshot-300x300.png" id="headshot" alt="A headshot of Camryn O'Donnell">
+   <main class="flex flex-col p-10 md:p-20 gap-20">
+      <h1 class="text-5xl">About Me</h1>
+      <section class="flex flex-col md:flex-row gap-20">
+         <div class="flex flex-col gap-10">
+            <p class="leading-relaxed">I am a <span class="underline text-red decoration-dotted">multidisciplinary designer</span> with an
+               interest in UX/UI design & design research. <br><br>I
+               studied at Carleton University in Ottawa, Ontario and obtained a Bachelor of Industrial Design in 2023.I
+               have experience working in commercial product design and in community projects.
+            </p>
+            <div class="flex gap-10">
+               <p class="text-xl">CV:</p>
+               <a role="button" tabindex="0" class="text-xl underline" href="/assets/documents/Camryn-ODonnell_CV.pdf">Download</a>
             </div>
-            <div id="bio" class="section--container_text">
-               <h1 class="font-sans text-white text-4xl">Hi!<br>My Name is Camryn O'Donnell</h1>
-               <p class="section--heading_lg heading2">I am a <span role="text" class="red">multidisciplinary
-                     designer</span> with an
-                  interest in <span role="text" class="green">UX/UI design</span> & <span role="text"
-                     class="blue">design research.</span>
-               </p>
-               <p class="section--paragraph">I'm passionate about design and I'm always looking for new ways in
-                  which design can be used as a
-                  tool to bridge gaps and help others! Design research is one of my areas of expertise and I am
-                  eager to explore a wide range of fields and design methodologies including co-design,
-                  participatory design, and speculative design.
-                  <br><br>
-                  What interests me most about design is learning how people interact with the objects and systems
-                  surrounding them and I think this context is key to uncovering the root of any problem. Through
-                  continuous collaboration and learning I hope to make a positive impact on the world around me.
-                  <br><br>
-                  When I’m not working, I love being creative, whether that’s drawing, sewing, making music, or
-                  cooking. I also enjoy playing video games & tabletop RPGs with friends!
-               </p>
-               <div id="about-me-content-link" class="section--link_button">
-                  <p class="link-button--label">CV:</p>
-                  <a id="download-resume" class="section--link-button link-button"
-                     href="assets\documents\Camryn-ODonnell_CV.pdf" download="Camryn-ODonnell_CV_June-2024"
-                     tabindex="0">
-                     <span aria-hidden="true" class="material-icons ">download</span>
-                     Download<span class="sr-only">CV</span>
-                  </a>
-               </div>
-            </div>
+            <p class="leading-relaxed">I'm passionate about design and I'm always looking for new ways in which design can be used as a tool to
+               bridge gaps and help others! Design research is one of my areas of expertise and I am eager to
+               explore a
+               wide range of fields and design methodologies including co-design, participatory design, and speculative
+               design. What interests me most about design is learning how people interact with the objects and systems
+               surrounding them and I think this context is key to uncovering the root of any problem. Through
+               continuous collaboration and learning I hope to make a positive impact on the world around me.</p>
          </div>
-         <!--Callout-->
-         <div id="callout-work" class="section--callout">
-            <p class="section--heading_sm heading4 yellow">I'm currently looking for work in Canada!</p>
+         <div class="flex flex-col">
+            <aside class="flex flex-col gap-5 border-l border-red pl-5 md:pl-10">
+               <h2 class="text-xl text-red">What is a multidisciplinary designer?</h2>
+               <p class="opacity-70">A multidisciplinary designer is a designer who has access to a broad skill set
+                  encompassing multiple
+                  fields including industrial/product design, UX/UI design, graphic design, interaction design, and web
+                  design.
+                  For me, the title multidisciplinary designer reflects my belief that sometimes we must think beyond
+                  the
+                  traditional form of a solution and represents my commitment to continuous learning.</p>
+            </aside>
          </div>
       </section>
+      <hr>
+      <p class="leading-relaxed">When I’m not working, I love
+         being creative, whether that’s drawing, sewing, making music, or cooking. I also enjoy playing video
+         games & tabletop RPGs with friends!</p>
+      <div>
+         <figure class="flex flex-col justify-start items-start gap-5">
+            <figcaption>A book I've been reading:</figcaption>
+            <img src="/assets/Capstone Assets/Capstone Images.png">
+         </figure>
+      </div>
    </main>
    <footer class="body--section_footer">
       <!--<button id="toggle-theme" aria-label="Toggle Light/Dark Mode" class="toggle-button" tabindex="0"></button>-->
