Added modal to about page

--- a/html/about.html
+++ b/html/about.html
@@ -56,7 +56,7 @@
       <h1 class="text-5xl">About Me</h1>
       <section class="flex flex-col md:flex-row gap-20">
          <div class="flex flex-col gap-10">
-            <p class="leading-relaxed">I am a <span class="underline text-red decoration-dotted">multidisciplinary designer</span> with an
+            <p class="leading-relaxed">I am a <span id="modal-button" class="underline hover:decoration-red hover:cursor-help decoration-dotted">multidisciplinary designer</span> with an
                interest in UX/UI design & design research. <br><br>I
                studied at Carleton University in Ottawa, Ontario and obtained a Bachelor of Industrial Design in 2023.I
                have experience working in commercial product design and in community projects.
@@ -74,7 +74,7 @@
                continuous collaboration and learning I hope to make a positive impact on the world around me.</p>
          </div>
          <div class="flex flex-col">
-            <aside class="flex flex-col gap-5 border-l border-red pl-5 md:pl-10">
+            <aside id="modal" class="invisible flex flex-col gap-5 border-l border-red pl-5 md:pl-10">
                <h2 class="text-xl text-red">What is a multidisciplinary designer?</h2>
                <p class="opacity-70">A multidisciplinary designer is a designer who has access to a broad skill set
                   encompassing multiple
