--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -67,8 +67,8 @@
          <h1 id="" class="text-6xl">Portfolio</h1>
 
          <div
-            class="w-full flex flex-col items-start md:flex-row gap-5 md:gap-10 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x-2 divide-inherit text-xl md:text-2xl">
-            <div id="filters" class="w-full sm:w-1/6 flex flex-col grow-0 gap-4 md:gap-6 ">
+            class="w-full flex flex-col items-start md:flex-row gap-5 md:gap-10 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x-2 divide-inherit text-lg">
+            <div id="filters" class="w-full sm:w-1/6 flex flex-col grow-0 gap-4 md:gap-6">
                <p>Sort By:</p>
                <div class="flex md:flex-col gap-4 md:gap-6 justify-start items-start">
                   <div class="flex md:flex-col gap-4 justify-start items-start">
@@ -91,20 +91,8 @@
                   </div>
                </div>
             </div>
-            <div id="project-list" class="flex flex-col pt-10 md:pt-0 md:pl-10 gap-14 self-stretch">
-               <div class="flex flex-col gap-8">
-                  <h2 class="font-semibold">UX/UI Design</h2>
-                  <div class="grid md:grid-cols-2 gap-5 md:gap-x-10 gap-y-5">
-                     <a>EARLY Transit App</a>
-                  </div>
-               </div>
-               <div class="flex flex-col gap-8">
-                  <h2 class="font-semibold">Design Research</h2>
-                  <div class="grid md:grid-cols-2 gap-5 md:gap-0 md:gap-x-20 md:gap-y-5">
-                     <a>Foldable Therapy Space</a>
-                     <a>EARLY Transit App</a>
-                     <a>Pneumatic Screwdriver</a>
-                  </div>
+            <div id="project-list" class="flex flex-col pt-10 md:pt-0 md:pl-10 gap-14 w-4/6">
+               <noscript>This browser does not support JavaScript</noscript>
                </div>
             </div>
          </div>
