--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         rel="stylesheet">
 </head>
 
-<body class="h-screen bg-white dark:bg-black text-black dark:text-white font-sans">
-    <main class="flex flex-col gap-10 self-stretch">
+<body class="h-screen bg-white dark:bg-black text-black dark:text-white font-sans flex flex-col">
+    <main class="flex flex-col gap-10 h-fit">
         <!--About Me-->
         <section id=""
-            class="bg-[url('/assets/line-distortions-4-transparentcolours.png')] bg-[length:2000px_auto] 2xl:bg-cover">
-            <div class="flex flex-col md:items-end md:flex-row-reverse p-10 md:p-20 gap-5 md:gap-20 w-full bg-white/70 dark:bg-black/70">
+            class="h-[70vh] bg-[url('/assets/line-distortions-4-transparentcolours.png')] bg-[length:2000px_auto] 2xl:bg-cover">
+            <div class="h-full flex flex-col md:items-end md:flex-row-reverse justify-end py-10 px-10 md:px-20 md:py-20 gap-5 md:gap-20 w-full bg-white/70 dark:bg-black/70">
                 <img class="w-32 h-32 md:w-60 md:h-60 grow-0 rounded-full" src="/assets/CODonnell-Headshot-300x300.png" id="headshot"
                     alt="A headshot of Camryn O'Donnell">
                 <div id="bio" class="flex flex-col gap-5">
@@ -47,13 +47,13 @@
             </div>
         </section>
 
-        <nav class="flex flex-col md:flex-row gap-5 justify-start px-10 md:px-20">
+        <nav class="flex flex-col md:flex-row gap-5 md:gap-20 justify-start px-10 md:px-20 md:text-lg">
             <a class="after:content-arrow hover:underline" href="html/portfolio.html" tabindex="0">Explore my work</a>
             <a class="after:content-arrow hover:underline" href="html/about.html" tabindex="0">Learn more about me</a>
         </nav>
     </main>
-    <footer class="shrink-0 px-10 md:px-20 pt-10 flex justify-end text-right">
-        <p class="text-xs md:text-base opactiy-70">Designed & Developed by Camryn O'Donnell</p>
+    <footer class="shrink-0 px-10 mt-auto md:px-20 py-10 flex justify-end text-right">
+        <p class="text-xs md:text-base opacity-70">Designed & Developed by Camryn O'Donnell</p>
     </footer>
 </body>
 
