Split projects.js into module, added counter-cartography project, added "Open Image in New Tab" to work around small image sizes on smaller screens

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!--Portfolio Items:-->
             <div class="section--container_column">
                 <div id="portfolio-content" class="section--container_column_border-bottom">
-                    <script src="/scripts/portfolioItems.js"></script>
+                    <script type="module" src="/scripts/portfolioItems.js"></script>
                     <noscript>
                         This browser does not support JavaScript. Feel free to download my portfolio below.
                     </noscript>
