Created reusable layout (header an footer), got rid of SASS style sheet, added animations, replaced logo with SVG, filled in about and contact pages more, added documentation to functions

--- a/index.html
+++ b/index.html
@@ -45,23 +45,24 @@
       <!--About Me-->
       <section
         id=""
-        class="h-[70vh] bg-[url('/assets/line-distortions-4-transparentcolours.png')] bg-[length:2000px_auto] 2xl:bg-cover"
+        class="h-[70vh] bg-lines bg-[length:2000px_auto] 2xl:bg-cover"
       >
         <div
           class="flex h-full w-full flex-col justify-end gap-5 bg-white/70 px-10 py-10 md:flex-row-reverse md:items-end md:gap-20 md:px-20 md:py-20 dark:bg-black/70"
         >
           <img
-            class="h-32 w-32 grow-0 rounded-full md:h-60 md:w-60"
+            class="h-48 w-48 grow-0 rounded-full md:h-60 md:w-60"
             src="/assets/CODonnell-Headshot-300x300.png"
             id="headshot"
             alt="A headshot of Camryn O'Donnell"
           />
           <div id="bio" class="flex flex-col gap-5">
-            <h1 class="text-2xl md:text-4xl">
-              Hi!<br />My Name is Camryn O'Donnell
+            <h1 class="text-4xl md:text-5xl">
+              Hi! <br />
+              My Name is Camryn O'Donnell
             </h1>
             <p class="text-lg md:text-2xl">
-              I am a multidisciipinary designer with an interest in UX/UI design
+              I am a multidiscipinary designer with an interest in UX/UI design
               and design research.
             </p>
           </div>
@@ -69,30 +70,27 @@
       </section>
 
       <nav
-        class="flex flex-col justify-start gap-5 px-10 md:flex-row md:gap-20 md:px-20 md:text-lg"
+        class="flex flex-col justify-start gap-5 px-10 text-lg md:flex-row md:gap-20 md:px-20"
       >
         <a
-          class="after:content-arrow hover:underline"
+          class="after:absolute after:pl-1 after:transition-transform after:content-arrow hover:underline hover:after:translate-x-2 md:no-underline"
           href="html/portfolio.html"
           tabindex="0"
           >Explore my work</a
         >
         <a
-          class="after:content-arrow hover:underline"
+          class="after:absolute after:pl-1 after:transition-transform after:content-arrow hover:underline hover:after:translate-x-2 md:no-underline"
           href="html/about.html"
           tabindex="0"
           >Learn more about me</a
         >
       </nav>
     </main>
-    <footer
-      class="mt-auto flex shrink-0 justify-end px-10 py-10 text-right md:px-20"
-    >
-      <p class="text-xs opacity-70 md:text-base">
-        Designed & Developed by Camryn O'Donnell
-      </p>
+    <footer>
+      <noscript
+        >For the optimal site experience, please enable Javascript</noscript
+      >
     </footer>
   </body>
-
   <script src="/scripts/script.js"></script>
 </html>
