--- a/404.html
+++ b/404.html
@@ -29,51 +29,17 @@
   </head>
 
   <body class="body">
-    <header id="header" class="body--section_header section">
-      <nav id="nav-bar" class="navigation">
-        <a
-          id="link-about-me"
-          class="section--link_with-icon_lg"
-          href="index.html"
-          tabindex="0"
-        >
-          <span id="camod-logo"></span>
-          <p id="camod-name" class="section--heading_lg">Camryn O'Donnell</p>
-        </a>
-        <a
-          id="link-portfolio"
-          class="section--link section--heading_sm"
-          href="index.html#portfolio-anchor"
-          tabindex="0"
-          >portfolio</a
-        >
-        <a
-          id="link-contact"
-          class="section--link section--heading_sm"
-          href="index.html#contact"
-          tabindex="0"
-          >contact</a
-        >
-      </nav>
+    <header id="header">
+      <noscript>Please enable JavaScript for the full site experience</noscript>
     </header>
     <main>
-      <section id="error-message" class="body--section_error">
-        <h2 class="section--heading_xl">404</h2>
-        <p class="section--heading_md">
-          Sorry! Looks like that page wasn't found.
-        </p>
+      <section id="error-message" class="">
+        <h1 class="">Error 404</h1>
+        <p class="">Sorry! Looks like that page wasn't found.</p>
       </section>
     </main>
-    <footer class="body--section_footer">
-      <button
-        id="toggle-theme"
-        aria-label="Toggle Light/Dark Theme"
-        class="toggle-button"
-        tabindex="0"
-      ></button>
-      <p class="section--paragraph">
-        Designed and Developed by Camryn O'Donnell
-      </p>
+    <footer id="footer">
+      <noscript>Your browser does not support JavaScript</noscript>
     </footer>
   </body>
   <script src="/scripts/script.js"></script>
