--- a/html/about.html
+++ b/html/about.html
@@ -39,64 +39,10 @@
   </head>
 
   <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
-    <header
-      id="header"
-      class="sticky top-0 z-10 flex bg-white px-10 pb-6 pt-8 md:px-20 dark:bg-black"
-    >
-      <nav id="nav-bar" class="container flex items-end justify-end gap-4">
-        <a
-          id="link-about-me"
-          class="mr-auto flex gap-4 text-4xl"
-          href="/"
-          tabindex="0"
-          aria-label="Camryn O'Donnell Home"
-        >
-          <svg
-            id="cam-od-logo"
-            data-name="Layer 2"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 146.04 142.54"
-            class="h-10 w-10 fill-black dark:fill-white"
-          >
-            <g id="Layer_3" data-name="Layer 3">
-              <path
-                class="cls-1"
-                d="M125.66,62.14c9.79-23.29,9.44-44.4-2.95-55.26-19.22-16.85-59.06-1.77-90.71,34.32C.36,77.31-9.38,118.78,9.84,135.63c5.26,4.6,12.09,6.91,20.08,6.91,6.69,0,14.19-1.61,22.23-4.88,5.07-2.05,10.21-4.69,15.31-7.85-2.19-2.52-4.13-5.28-5.75-8.22-4.46,2.72-8.92,5-13.32,6.78-13.74,5.56-25.39,5.47-31.94-.28-14.5-12.71-3.91-49.46,23.09-80.27C60.08,24.39,85.27,9.94,102.54,9.94c5.43,0,10.09,1.44,13.57,4.48,4.42,3.88,6.51,9.99,6.51,17.49s-2.13,16.58-6.15,26.12c-3.89-1.19-8.01-1.84-12.28-1.84-23.09,0-41.88,18.79-41.88,41.88,0,7.19,1.82,13.96,5.01,19.86,1.6,2.96,3.55,5.7,5.79,8.18,7.67,8.49,18.76,13.83,31.08,13.83,23.08,0,41.87-18.78,41.87-41.87,0-15.24-8.18-28.59-20.38-35.93ZM104.18,129.91c-9.05,0-17.22-3.8-23.02-9.87-2.32-2.43-4.26-5.21-5.72-8.27-1.99-4.15-3.11-8.8-3.11-13.71,0-17.56,14.29-31.85,31.85-31.85,2.73,0,5.39.34,7.92.99-4.84,9.18-11.28,18.58-19.08,27.49-3.94,4.49-8.06,8.67-12.28,12.51,1.25,3.21,3.15,6.09,5.52,8.51,4.95-4.38,9.75-9.22,14.3-14.42,8.6-9.81,15.58-20.01,20.82-30.02,8.82,5.67,14.66,15.56,14.66,26.79,0,17.56-14.3,31.85-31.85,31.85Z"
-              />
-            </g>
-          </svg>
-          <p
-            aria-hidden="true"
-            id="camod-name"
-            class="h-0 w-0 overflow-hidden !pl-0 md:h-fit md:w-fit"
-          >
-            Camryn O'Donnell
-          </p>
-        </a>
-        <a
-          id="link-portfolio"
-          class="hover:underline focus-visible:underline focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-1 focus-visible:outline-inherit"
-          href="./about.html"
-          tabindex="0"
-          >about</a
-        >
-        <a
-          id="link-portfolio"
-          class="hover:underline"
-          href="./portfolio.html"
-          tabindex="0"
-          >portfolio</a
-        >
-        <a
-          id="link-contact"
-          class="hover:underline"
-          href="./contact.html"
-          tabindex="0"
-          >contact</a
-        >
-      </nav>
+    <header>
+      <noscript>Your browser does not support JavaScript</noscript>
     </header>
-    <main class="flex flex-col gap-20 p-10 md:p-20">
+    <main class="flex flex-col gap-10 p-10 md:gap-20 md:p-20">
       <h1 class="text-5xl">About Me</h1>
       <section class="flex flex-col gap-20 md:flex-row">
         <div class="flex flex-col gap-10">
@@ -138,7 +84,7 @@
         <div class="flex flex-col">
           <aside
             id="modal"
-            class="invisible flex flex-col gap-5 border-l border-red pl-5 md:pl-10"
+            class="invisible hidden flex-col gap-5 border-l border-red pl-5 md:flex md:pl-10"
           >
             <h2 class="text-xl text-red">
               What is a multidisciplinary designer?
@@ -162,17 +108,42 @@
         tabletop RPGs with friends!
       </p>
       <div>
-        <figure class="flex flex-col items-start justify-start gap-5">
-          <figcaption>A book I've been reading:</figcaption>
-          <img src="/assets/Capstone Assets/Capstone Images.png" />
-        </figure>
+        <div class="flex flex-col items-end gap-10 md:flex-row">
+          <figure
+            class="flex flex-col items-start justify-start gap-5 self-stretch md:w-1/4"
+          >
+            <figcaption>A photo of Gillian Anderson:</figcaption>
+            <img
+              class="w-full object-cover"
+              src="/assets/about/FF77biZX0AY1FfK.jpg"
+            />
+          </figure>
+          <figure
+            class="flex flex-col items-start justify-start gap-5 md:w-1/4"
+          >
+            <figcaption>A photo of Gillian Anderson:</figcaption>
+            <img
+              class="w-full object-cover"
+              src="/assets/about/FF76TnGXoAcBtIM.jpg"
+            />
+          </figure>
+          <figure
+            class="flex flex-col items-start justify-start gap-5 md:w-2/5"
+          >
+            <figcaption>A photo of Gillian Anderson:</figcaption>
+            <img
+              class="w-full object-cover"
+              src="/assets/about/FF78kfNX0BA3bGr.jpg"
+            />
+          </figure>
+        </div>
       </div>
     </main>
-    <footer class="body--section_footer">
-      <!--<button id="toggle-theme" aria-label="Toggle Light/Dark Mode" class="toggle-button" tabindex="0"></button>-->
-      <p class="section--paragraph">Designed & Developed by Camryn O'Donnell</p>
+    <footer>
+      <noscript
+        >Sorry, JavaScript must be enable for this content to display</noscript
+      >
     </footer>
   </body>
-
   <script src="/scripts/script.js"></script>
 </html>
