--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,108 +1,172 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!--Meta Tags-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="dark light" />
 
-<head>
-   <!--Meta Tags-->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="color-scheme" content="dark light">
+    <!--Site Info-->
+    <title>Portfolio - Camryn O'Donnell</title>
+    <meta
+      name="description"
+      content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design."
+    />
+    <meta name="author" content="Camryn O'Donnell" />
 
-   <!--Site Info-->
-   <title>Camryn O'Donnell - Portfolio</title>
-   <meta name="description"
-      content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design.">
-   <meta name="author" content="Camryn O'Donnell">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/SVG/camod-logo-black.svg"
+    />
 
-   <link rel="icon" type="image/x-icon" href="/assets/SVG/camod-logo-black.svg">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="/styles/main.css" />
 
-   <!--Stylesheet-->
-   <link rel="stylesheet" href="/styles/main.css">
+    <!--Material Design Icons-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-   <!--Material Design Icons-->
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-
-
-   <!--IBM Plex Sans-->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link
+    <!--IBM Plex Sans-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet">
-</head>
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="bg-white dark:bg-black text-black dark:text-white font-sans">
-   <header id="header" class="bg-white dark:bg-black flex px-10 md:px-20 pt-8 pb-6 z-10 sticky top-0">
-      <nav id="nav-bar" class="container flex items-end justify-end gap-4">
-         <a id="link-about-me" class="text-4xl mr-auto flex gap-4" href="/" tabindex="0"
-            aria-label="Camryn O'Donnell Home">
-            <svg id="cam-od-logo" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 146.04 142.54"
-               class="fill-black dark:fill-white w-10 h-10">
-               <g id="Layer_3" data-name="Layer 3">
-                  <path class="cls-1"
-                     d="M125.66,62.14c9.79-23.29,9.44-44.4-2.95-55.26-19.22-16.85-59.06-1.77-90.71,34.32C.36,77.31-9.38,118.78,9.84,135.63c5.26,4.6,12.09,6.91,20.08,6.91,6.69,0,14.19-1.61,22.23-4.88,5.07-2.05,10.21-4.69,15.31-7.85-2.19-2.52-4.13-5.28-5.75-8.22-4.46,2.72-8.92,5-13.32,6.78-13.74,5.56-25.39,5.47-31.94-.28-14.5-12.71-3.91-49.46,23.09-80.27C60.08,24.39,85.27,9.94,102.54,9.94c5.43,0,10.09,1.44,13.57,4.48,4.42,3.88,6.51,9.99,6.51,17.49s-2.13,16.58-6.15,26.12c-3.89-1.19-8.01-1.84-12.28-1.84-23.09,0-41.88,18.79-41.88,41.88,0,7.19,1.82,13.96,5.01,19.86,1.6,2.96,3.55,5.7,5.79,8.18,7.67,8.49,18.76,13.83,31.08,13.83,23.08,0,41.87-18.78,41.87-41.87,0-15.24-8.18-28.59-20.38-35.93ZM104.18,129.91c-9.05,0-17.22-3.8-23.02-9.87-2.32-2.43-4.26-5.21-5.72-8.27-1.99-4.15-3.11-8.8-3.11-13.71,0-17.56,14.29-31.85,31.85-31.85,2.73,0,5.39.34,7.92.99-4.84,9.18-11.28,18.58-19.08,27.49-3.94,4.49-8.06,8.67-12.28,12.51,1.25,3.21,3.15,6.09,5.52,8.51,4.95-4.38,9.75-9.22,14.3-14.42,8.6-9.81,15.58-20.01,20.82-30.02,8.82,5.67,14.66,15.56,14.66,26.79,0,17.56-14.3,31.85-31.85,31.85Z" />
-               </g>
-            </svg>
-            <p aria-hidden="true" id="camod-name" class="w-0 md:w-fit h-0 md:h-fit !pl-0 overflow-hidden">Camryn
-               O'Donnell</p>
-         </a>
-         <a id="link-portfolio" class="hover:underline focus-visible:outline focus-visible:outline-2 
-         focus-visible:outline-offset-1
-         focus-visible:outline-inherit focus-visible:underline" href="./about.html" tabindex="0">about</a>
-         <a id="link-portfolio" class="hover:underline" href="./portfolio.html" tabindex="0">portfolio</a>
-         <a id="link-contact" class="hover:underline" href="./contact.html" tabindex="0">contact</a>
-      </nav>
-   </header>
-   <!--Portfolio-->
-   <main class="flex flex-col gap-10 items-start">
-      <section id="project-gallery" class="w-full md:px-20">
-         <div class="max-w-full flex gap-5 border-red border-b-2 overflow-x-scroll overflow-y-hidden">
-            <img class="w-screen h-60 bg-slate-400 shrink-0">
-            <img class="w-screen h-60 bg-slate-400 shrink-0">
-            <img class="w-screen h-60 bg-slate-400 shrink-0">
-         </div>
+  <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
+    <header>
+      <noscript
+        >JavaScript must be enabled for this content to display</noscript
+      >
+    </header>
+    <!--Portfolio-->
+    <main class="flex h-fit flex-col items-start gap-10">
+      <section
+        id="project-gallery"
+        class="h-[50vh] md:px-20"
+        aria-label="Featured Projects"
+      >
+        <div
+          class="flex h-full snap-x snap-mandatory gap-0 overflow-hidden overflow-x-scroll"
+        >
+          <a
+            class="w-full shrink-0"
+            href="/html/portfolio/Foldable-Therapy-Space.html"
+            title="Foldable Therapy Space"
+            ><img
+              src="/assets/Capstone Assets/Capstone-Image_0.jpg"
+              class="h-full snap-center snap-always object-cover"
+          /></a>
+          <a
+            class="w-full shrink-0"
+            href="/html/portfolio/EARLY-Transit-App.html"
+            title="Early Transit App"
+            ><img
+              src="/assets/Early/EARLY-Image_0.png"
+              class="h-full snap-center snap-always object-cover"
+          /></a>
+        </div>
       </section>
 
-      <section id="portfolio-index" class="w-full px-10 md:px-20 flex flex-col gap-10">
-         <!--Portfolio Header-->
-         <h1 id="" class="text-6xl">Portfolio</h1>
+      <section
+        id="portfolio-index"
+        class="flex w-full flex-col gap-10 px-10 md:px-20"
+        aria-label="All Projects"
+      >
+        <!--Portfolio Header-->
+        <h1 id="" class="text-5xl">Portfolio</h1>
 
-         <div
-            class="w-full flex flex-col items-start md:flex-row gap-5 md:gap-10 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x-2 divide-inherit text-lg">
-            <div id="filters" class="w-full sm:w-1/6 flex flex-col grow-0 gap-4 md:gap-6">
-               <p>Sort By:</p>
-               <div class="flex md:flex-col gap-4 md:gap-6 justify-start items-start">
-                  <div class="flex md:flex-col gap-4 justify-start items-start">
-                     <input id="date-sort" type="radio" name="sort" class="hidden peer" value="">
-                     <label for="date-sort" class="peer-checked:font-bold hover:underline active:underline">
-                        Date
-                     </label>
-                  </div>
-                  <div class="flex md:flex-col gap-4 justify-start items-start">
-                     <input id="name-sort" type="radio" name="sort" class="hidden peer" value="">
-                     <label for="name-sort" class="peer-checked:font-bold hover:underline active:underline">
-                        Name
-                     </label>
-                  </div>
-                  <div class="flex md:flex-col gap-4 justify-start items-start">
-                     <input id="tags-sort" type="radio" name="sort" class="hidden peer" value="">
-                     <label for="tags-sort" class="peer-checked:font-bold hover:underline active:underline">
-                        Tags
-                     </label>
-                  </div>
-               </div>
+        <div
+          class="divide-inherit flex w-full flex-col items-start gap-5 divide-x-0 divide-y-2 text-lg md:flex-row md:gap-10 md:divide-x-2 md:divide-y-0"
+        >
+          <fieldset
+            id="filters"
+            class="flex w-full grow-0 flex-col gap-4 text-xl sm:w-1/6 md:gap-6"
+            role="radiogroup"
+          >
+            <legend>Sort By:</legend>
+            <div
+              class="flex items-start justify-start has-[:checked]:order-first md:flex-col"
+            >
+              <input
+                id="date-sort"
+                type="radio"
+                name="sort"
+                class="peer hidden"
+                value=""
+              />
+              <label
+                for="date-sort"
+                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                tabindex="0"
+                role="radio"
+              >
+                Date
+              </label>
             </div>
-            <div id="project-list" class="flex flex-col pt-10 md:pt-0 md:pl-10 gap-14 w-4/6">
-               <noscript>This browser does not support JavaScript</noscript>
-               </div>
+            <div
+              class="flex items-start justify-start has-[:checked]:order-first md:flex-col"
+            >
+              <input
+                id="name-sort"
+                type="radio"
+                name="sort"
+                class="peer hidden"
+                tabindex="0"
+                role="radio"
+              />
+              <label
+                for="name-sort"
+                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                tabindex="0"
+                aria-controls="project-list"
+                role="radio"
+              >
+                Name
+              </label>
             </div>
-         </div>
+            <div
+              class="flex items-start justify-start has-[:checked]:order-first md:flex-col"
+            >
+              <input
+                id="tags-sort"
+                type="radio"
+                name="sort"
+                class="peer hidden"
+                value=""
+                tabindex="0"
+                role="radio"
+              />
+              <label
+                for="tags-sort"
+                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                tabindex="0"
+                aria-controls="project-list"
+              >
+                Tags
+              </label>
+            </div>
+          </fieldset>
+          <div
+            id="project-list"
+            class="flex w-full flex-col gap-14 pt-10 md:w-4/6 md:pl-10 md:pt-0"
+          >
+            <noscript>This content requires JavaScript to be enabled.</noscript>
+          </div>
+        </div>
       </section>
-   </main>
-   <footer class="flex w-full h-fit pt-20 pb-5 px-10 md:px-20">
-      <!--<button id="toggle-theme" aria-label="Toggle Light/Dark Mode" class="toggle-button" tabindex="0"></button>-->
-      <p class="opacity-70 text-right">Designed & Developed by Camryn O'Donnell</p>
-   </footer>
-</body>
-<script type="module" src="/scripts/portfolioIndex.js"></script>
-
+    </main>
+    <footer>
+      <noscript
+        >For optimal site experience, please enable Javascript.</noscript
+      >
+    </footer>
+  </body>
+  <script type="module" src="/scripts/portfolioIndex.js"></script>
+  <script src="/scripts/script.js"></script>
 </html>
