Redid styling for light/dark mode colours (added CSS variables to root and used them in tailwind.config.js), fixed references to light/dark styles

--- a/html/contact.html
+++ b/html/contact.html
@@ -38,7 +38,7 @@
     />
   </head>
 
-  <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
+  <body class="bg-bg-color text-fg-color font-sans">
     <header id="header">
       <noscript>Your browser does not support JavaScript</noscript>
     </header>
@@ -57,7 +57,9 @@
             design, send me an email!
           </p>
           <div class="flex flex-1 items-center gap-5">
-            <div class="h-0 w-full min-w-10 border-b border-b-white/50"></div>
+            <div
+              class="border-b-fg-color/50 h-0 w-full min-w-10 border-b"
+            ></div>
 
             <a
               id="email"
@@ -81,7 +83,9 @@
             </p>
           </div>
           <div class="flex flex-1 items-center gap-5">
-            <div class="h-0 w-full min-w-10 border-b border-b-white/50"></div>
+            <div
+              class="border-b-fg-color/50 h-0 w-full min-w-10 border-b"
+            ></div>
             <a
               id="linkedin"
               class="flex items-center gap-2 text-xl font-semibold text-blue md:text-2xl"
@@ -99,10 +103,12 @@
         <div class="flex items-start gap-10">
           <p class="">You can also find me on:</p>
           <div class="flex flex-1 items-center gap-5">
-            <div class="h-0 w-full min-w-10 border-b border-b-white/50"></div>
+            <div
+              class="border-b-fg-color/50 h-0 w-full min-w-10 border-b"
+            ></div>
             <a
               id="github"
-              class="flex items-center gap-2 text-xl font-semibold text-red md:text-2xl md:hover:bg-white"
+              class="flex items-center gap-2 text-xl font-semibold text-red md:text-2xl"
               href="https://github.com/camdotod"
               tabindex="0"
               target="_blank"
