--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -38,7 +38,7 @@
     />
   </head>
 
-  <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
+  <body class="text-fg-color bg-bg-color font-sans">
     <header>
       <noscript
         >JavaScript must be enabled for this content to display</noscript
@@ -102,7 +102,7 @@
               />
               <label
                 for="date-sort"
-                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                class="peer-checked:border-fg-color border-bg-color border px-2 py-1 hover:underline peer-checked:border"
                 tabindex="0"
                 role="radio"
               >
@@ -122,7 +122,7 @@
               />
               <label
                 for="name-sort"
-                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                class="peer-checked:border-fg-color border-bg-color border px-2 py-1 hover:underline peer-checked:border"
                 tabindex="0"
                 aria-controls="project-list"
                 role="radio"
@@ -144,7 +144,7 @@
               />
               <label
                 for="tags-sort"
-                class="border border-black px-2 py-1 hover:underline peer-checked:border peer-checked:border-white"
+                class="peer-checked:border-fg-color border-bg-color border px-2 py-1 hover:underline peer-checked:border"
                 tabindex="0"
                 aria-controls="project-list"
               >
