--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
 
   <body
-    class="flex h-screen flex-col bg-white font-sans text-black dark:bg-black dark:text-white"
+    class="text-fg-color bg-bg-color flex h-screen flex-col bg-white font-sans"
   >
     <main class="flex h-fit flex-col gap-10">
       <!--About Me-->
