--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,7 @@
     />
   </head>
 
-  <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
+  <body class="bg-bg-color text-fg-color font-sans">
     <header>
       <noscript>Your browser does not support JavaScript</noscript>
     </header>
