--- a/html/portfolio/Foldable-Therapy-Space.html
+++ b/html/portfolio/Foldable-Therapy-Space.html
@@ -38,7 +38,7 @@
     />
   </head>
 
-  <body class="bg-white font-sans text-black dark:bg-black dark:text-white">
+  <body class="bg-bg-color text-fg-color font-sans">
     <header id="header">
       <noscript>For best site experience, please enable JavaScript</noscript>
     </header>
